--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.2.0",
+    "service": "^0.1.4",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
